src/snapshots/tests__thf_unit_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Unary(
    Infix(
        ThfInfixUnary {
            left: Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "c",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            op: InfixInequality,
            right: Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "d",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ),
)
