src/snapshots/tests__thf_unit_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
Unitary(
    Atomic(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
