src/snapshots/tests__thf_unit_formula.snap
---
source: src/tests.rs
expression: parsed
---
Infix(
    ThfDefinedInfix {
        left: Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        op: DefinedInfixPred(
            InfixEquality,
        ),
        right: Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "d",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
