src/snapshots/tests__thf_unitary_term-5.snap
---
source: src/tests.rs
expression: parsed
---
Parenthesised(
    Unitary(
        Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
