src/snapshots/tests__thf_unitary_term.snap
---
source: src/tests.rs
expression: parsed
---
Atomic(
    Plain(
        Constant(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
