src/snapshots/tests__thf_unitary_type.snap
---
source: src/tests.rs
expression: parsed
---
ThfUnitaryType(
    Atomic(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
