src/snapshots/tests__thf_variable_list-3.snap
---
source: src/tests.rs
expression: parsed
---
ThfVariableList(
    [
        ThfTypedVariable {
            variable: Variable(
                UpperWord(
                    "X",
                ),
            ),
            typ: Unitary(
                ThfUnitaryType(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "t",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
        ThfTypedVariable {
            variable: Variable(
                UpperWord(
                    "Y",
                ),
            ),
            typ: Unitary(
                ThfUnitaryType(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "s",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ],
)
