src/snapshots/tests__thf_variable_list.snap
---
source: src/tests.rs
expression: parsed
---
ThfVariableList(
    [
        ThfTypedVariable {
            variable: Variable(
                UpperWord(
                    "X",
                ),
            ),
            typ: Unitary(
                ThfUnitaryType(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "t",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ],
)
