src/snapshots/tests__tptp_input-3.snap
---
source: src/tests.rs
expression: parsed
---
Annotated(
    Fof(
        FofAnnotated {
            name: AtomicWord(
                Lower(
                    LowerWord(
                        "test",
                    ),
                ),
            ),
            role: Axiom,
            formula: FofFormula(
                Unitary(
                    Atomic(
                        Defined(
                            Plain(
                                FofDefinedPlainFormula(
                                    FofDefinedPlainTerm(
                                        DefinedConstant(
                                            DefinedFunctor(
                                                AtomicDefinedWord(
                                                    DollarWord(
                                                        LowerWord(
                                                            "true",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            annotations: Annotations(
                None,
            ),
        },
    ),
)
