src/snapshots/tests__tptp_input-5.snap
---
source: src/tests.rs
expression: parsed
---
Annotated(
    Cnf(
        CnfAnnotated {
            name: AtomicWord(
                Lower(
                    LowerWord(
                        "test",
                    ),
                ),
            ),
            role: Axiom,
            formula: Disjunction(
                Disjunction(
                    [
                        Atomic(
                            Defined(
                                Plain(
                                    FofDefinedPlainFormula(
                                        FofDefinedPlainTerm(
                                            DefinedConstant(
                                                DefinedFunctor(
                                                    AtomicDefinedWord(
                                                        DollarWord(
                                                            LowerWord(
                                                                "true",
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
            annotations: Annotations(
                None,
            ),
        },
    ),
)
