src/snapshots/tests__tptp_input-7.snap
---
source: src/tests.rs
expression: parsed
---
Annotated(
    Thf(
        ThfAnnotated {
            name: AtomicWord(
                Lower(
                    LowerWord(
                        "test",
                    ),
                ),
            ),
            role: Axiom,
            formula: Logic(
                Unitary(
                    Atomic(
                        Defined(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            annotations: Annotations(
                None,
            ),
        },
    ),
)
